# CourseWork_3

./: pyproject.toml
scr/: funcs.py  main.py
tests/: config.py  test_config.py  test_funcs.py  test_json.json
